adicionando link de projeto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">#</th>
+
                 <th scope="col">NOME</th>
                 <th scope="col">SOBRE </th>
                 <th scope="col">IDADE</th>
@@ -49,7 +49,9 @@
     <div class="container">
         <a href="skil.html" class="btn btn-primary position-relative">HARD SKIL</a>
         <a href="softskil.html" class="btn btn-primary position-relative">SOFT SKIL</a>
-        <a href="http://18.230.26.233" class="btn btn-primary position-relative">PROJETO PESSOAL</a>
+        <a href="http://18.230.26.233" class="btn btn-primary position-relative">PROJETO PESSOAL-1</a>
+        <a href="https://cadinoxequipamentos.vercel.app" class="btn btn-primary position-relative">PROJETO PESSOAL-2</a>
+        <a href="https://vercel.com/alexandre945/loja-virtual" class="btn btn-primary position-relative">PROJETO PESSOAL-3</a>
     </div>
 
 </body>
