--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <table class="table">
         <thead>
             <tr>
-
+                <th scope="col">#</th>
                 <th scope="col">NOME</th>
                 <th scope="col">SOBRE </th>
                 <th scope="col">IDADE</th>
