--- a/index.html
+++ b/index.html
@@ -45,15 +45,28 @@
 
         </tbody>
     </table>
+    <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="skil.html">HAD SKIL</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="softskil.html">SOFT SKIL</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="http://18.230.26.233">PROJETO-01</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="https://cadinoxequipamentos.vercel.app">PROJETO-02</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="https://github.com/alexandre945">GITHUB</a>
+            </li>
 
-    <div class="container">
-        <a href="skil.html" class="btn btn-primary position-relative">HARD SKIL</a>
-        <a href="softskil.html" class="btn btn-primary position-relative">SOFT SKIL</a>
-        <a href="http://18.230.26.233" class="btn btn-primary position-relative">PROJETO PESSOAL-1</a>
-        <a href="https://cadinoxequipamentos.vercel.app" class="btn btn-primary position-relative">PROJETO PESSOAL-2</a>
-        <a href="https://vercel.com/alexandre945/loja-virtual" class="btn btn-primary position-relative">PROJETO PESSOAL-3</a>
-    </div>
-
+        </ol>
+    </nav>
 </body>
+
+</html>
 
 </html>
