--- a/skil.html
+++ b/skil.html
@@ -17,6 +17,7 @@
                 <th scope="col">#</th>
                 <th scope="col">HTML</th>
                 <th scope="col">CSS</th>
+                <th scope="col">GIT</th>
                 <th scope="col">JAVASCRIPT</th>
                 <th scope="col">PHP</th>
                 <th scope="col">DOCKER</th>
@@ -24,7 +25,7 @@
                 <th scope="col">LARAVEL</th>
                 <th scope="col">LARADOCK</th>
                 <th scope="col">MYSQL</th>
-                <th scope="col">BOOSTRAP</th>
+                <th scope="col">BOOTSTRAP</th>
             </tr>
         </thead>
         <tbody>
@@ -33,6 +34,7 @@
                 <td>75%</td>
                 <td>55%</td>
                 <td>45%</td>
+                <td>48%</td>
                 <td>40%</td>
                 <td>40%</td>
                 <td>35%</td>
