--- a/softskil.html
+++ b/softskil.html
@@ -15,7 +15,7 @@
 
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">EQUIIPE</th>
+                <th scope="col">EQUIPE</th>
                 <th scope="col">DICIPLINA</th>
                 <th scope="col">COMUNICAÇÂO</th>
                 <th scope="col">DISPOSIÇÂO</th>
